--- a/index.html
+++ b/index.html
@@ -31,32 +31,41 @@ _  /  / / / /_/ /  / / / /_/ / /__ _  / /  __/
     <meta name="google-site-verification" content="2pzgGVyeWQ2ZwUCqE9oINFM1T2IXKqwSgMy663niFJs" />
     <meta http-equiv="Cache-Control" content="max-age=3600" />
     <meta http-equiv="x-dns-prefetch-control" content="on" />
-    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />
-    <link rel="apple-touch-icon-precomposed" href="assets/icon.png" />
-    <link rel="stylesheet" type="text/css" href="assets/style.css" />
+    <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon" />
+    <link rel="apple-touch-icon-precomposed" href="assets/images/icon.png" />
+    <link rel="stylesheet" type="text/css" href="assets/main.css" />
     <script src="https://code.jquery.com/jquery-1.12.2.min.js" integrity="sha256-lZFHibXzMHo3GGeehn1hudTAP3Sc0uKXBXAzHX1sjtk=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jplayer/2.9.2/jplayer/jquery.jplayer.min.js"></script>
 </head>
 <body>
-    <div class="content">
-        <p class="hero f-icon"><span>L</span><span>R</span></p>
 
-        <div class="audio-player js-toggle">
-            <div class="controls">
-                <div class="control when-paused f-icon play">P</div>
-                <div class="control when-playing f-icon pause">p</div>
-            </div>
-            <div class="data">
-                <div class="when-paused">
-                    <h2 class="data__cta f-helvetica">Listen live</h2>
+    <div class="content">
+        <div class="message">
+            <h1 class="message__header">Monocle.com has a technical issue.</h1>
+            <p class="message__copy">Please enjoy our live radio until normal service is restored.</p>
+        </div>
+
+        <div class="player-wrapper">
+            <p class="player-hero f-icon"><span>L</span><span>R</span></p>
+            <div class="audio-player js-toggle">
+                <div class="controls">
+                    <div class="control when-paused f-icon play">P</div>
+                    <div class="control when-playing f-icon pause">p</div>
                 </div>
-                <div class="when-playing">
-                    <strong class="data__now-playing f-helvetica">Now playing:</strong>
-                    <h3 class="data__show f-helvetica js-show"></h3>
+                <div class="data">
+                    <div class="when-paused">
+                        <h2 class="data__cta f-helvetica">Listen live</h2>
+                    </div>
+                    <div class="when-playing">
+                        <strong class="data__now-playing f-helvetica">Now playing:</strong>
+                        <h3 class="data__show f-helvetica js-show"></h3>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+
+
     <div id="player"></div>
 
     <script src="assets/functions.js"></script>
