Rename partials, update copy and use Helvetica

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ _  /  / / / /_/ /  / / / /_/ / /__ _  / /  __/
 
     <div class="content">
         <div class="message">
-            <h1 class="message__header">Monocle.com has a technical issue.</h1>
+            <h1 class="message__header">Monocle.com is currently unavailable</h1>
             <p class="message__copy">Please enjoy our live radio until normal service is restored.</p>
         </div>
 
